tests/src/frontend/typechecking/invalid/mutability_preservation_invalid.sk
base class P<T>
class C1<T1, T2>() extends P<T2>
class C2<T>() extends P<Int>

fun no1(): void {
  _: P<Int> = C1<mutable Vector<Int>, Int>();
}

fun no2(): void {
  _: P<Int> = C2<mutable Vector<Int>>()
}
